build/xtask/tests/snapshots/i2c_codegen__app_cosmo_rev-b-dev.toml.sensor-id-to-component-id-Sensors.snap
---
source: build/xtask/tests/i2c-codegen.rs
expression: contents
---
pub const MAX_SENSOR_COMPONENT_ID_LEN: usize = 8;
pub const SENSOR_ID_TO_COMPONENT_ID: [fixedstr::FixedStr<
    'static,
    MAX_SENSOR_COMPONENT_ID_LEN,
>; 154] = [
    fixedstr::FixedStr::from_str("J200/U1"),
    fixedstr::FixedStr::from_str("J200/U1"),
    fixedstr::FixedStr::from_str("J200/U1"),
    fixedstr::FixedStr::from_str("J200/U1"),
    fixedstr::FixedStr::from_str("J200/J2"),
    fixedstr::FixedStr::from_str("J201/U1"),
    fixedstr::FixedStr::from_str("J201/U1"),
    fixedstr::FixedStr::from_str("J201/U1"),
    fixedstr::FixedStr::from_str("J201/U1"),
    fixedstr::FixedStr::from_str("J201/J2"),
    fixedstr::FixedStr::from_str("J202/U1"),
    fixedstr::FixedStr::from_str("J202/U1"),
    fixedstr::FixedStr::from_str("J202/U1"),
    fixedstr::FixedStr::from_str("J202/U1"),
    fixedstr::FixedStr::from_str("J202/J2"),
    fixedstr::FixedStr::from_str("J203/U1"),
    fixedstr::FixedStr::from_str("J203/U1"),
    fixedstr::FixedStr::from_str("J203/U1"),
    fixedstr::FixedStr::from_str("J203/U1"),
    fixedstr::FixedStr::from_str("J203/J2"),
    fixedstr::FixedStr::from_str("J204/U1"),
    fixedstr::FixedStr::from_str("J204/U1"),
    fixedstr::FixedStr::from_str("J204/U1"),
    fixedstr::FixedStr::from_str("J204/U1"),
    fixedstr::FixedStr::from_str("J204/J2"),
    fixedstr::FixedStr::from_str("J205/U1"),
    fixedstr::FixedStr::from_str("J205/U1"),
    fixedstr::FixedStr::from_str("J205/U1"),
    fixedstr::FixedStr::from_str("J205/U1"),
    fixedstr::FixedStr::from_str("J205/J2"),
    fixedstr::FixedStr::from_str("J206/U1"),
    fixedstr::FixedStr::from_str("J206/U1"),
    fixedstr::FixedStr::from_str("J206/U1"),
    fixedstr::FixedStr::from_str("J206/U1"),
    fixedstr::FixedStr::from_str("J206/J2"),
    fixedstr::FixedStr::from_str("J207/U1"),
    fixedstr::FixedStr::from_str("J207/U1"),
    fixedstr::FixedStr::from_str("J207/U1"),
    fixedstr::FixedStr::from_str("J207/U1"),
    fixedstr::FixedStr::from_str("J207/J2"),
    fixedstr::FixedStr::from_str("J208/U1"),
    fixedstr::FixedStr::from_str("J208/U1"),
    fixedstr::FixedStr::from_str("J208/U1"),
    fixedstr::FixedStr::from_str("J208/U1"),
    fixedstr::FixedStr::from_str("J208/J2"),
    fixedstr::FixedStr::from_str("J209/U1"),
    fixedstr::FixedStr::from_str("J209/U1"),
    fixedstr::FixedStr::from_str("J209/U1"),
    fixedstr::FixedStr::from_str("J209/U1"),
    fixedstr::FixedStr::from_str("J209/J2"),
    fixedstr::FixedStr::from_str("J44/U1"),
    fixedstr::FixedStr::from_str("J45/U1"),
    fixedstr::FixedStr::from_str("J46/U1"),
    fixedstr::FixedStr::from_str("J210"),
    fixedstr::FixedStr::from_str("J211"),
    fixedstr::FixedStr::from_str("U1/SBTSI"),
    fixedstr::FixedStr::from_str("U53"),
    fixedstr::FixedStr::from_str("U82"),
    fixedstr::FixedStr::from_str("U82"),
    fixedstr::FixedStr::from_str("U82"),
    fixedstr::FixedStr::from_str("U83"),
    fixedstr::FixedStr::from_str("U83"),
    fixedstr::FixedStr::from_str("U83"),
    fixedstr::FixedStr::from_str("U81"),
    fixedstr::FixedStr::from_str("U81"),
    fixedstr::FixedStr::from_str("U81"),
    fixedstr::FixedStr::from_str("U15"),
    fixedstr::FixedStr::from_str("U15"),
    fixedstr::FixedStr::from_str("U15"),
    fixedstr::FixedStr::from_str("U15"),
    fixedstr::FixedStr::from_str("U16"),
    fixedstr::FixedStr::from_str("U16"),
    fixedstr::FixedStr::from_str("U42"),
    fixedstr::FixedStr::from_str("U42"),
    fixedstr::FixedStr::from_str("U127"),
    fixedstr::FixedStr::from_str("U127"),
    fixedstr::FixedStr::from_str("U90"),
    fixedstr::FixedStr::from_str("U90"),
    fixedstr::FixedStr::from_str("U90"),
    fixedstr::FixedStr::from_str("U90"),
    fixedstr::FixedStr::from_str("U90"),
    fixedstr::FixedStr::from_str("U90"),
    fixedstr::FixedStr::from_str("U90"),
    fixedstr::FixedStr::from_str("U90"),
    fixedstr::FixedStr::from_str("U103"),
    fixedstr::FixedStr::from_str("U103"),
    fixedstr::FixedStr::from_str("U103"),
    fixedstr::FixedStr::from_str("U103"),
    fixedstr::FixedStr::from_str("U103"),
    fixedstr::FixedStr::from_str("U103"),
    fixedstr::FixedStr::from_str("U103"),
    fixedstr::FixedStr::from_str("U103"),
    fixedstr::FixedStr::from_str("U116"),
    fixedstr::FixedStr::from_str("U116"),
    fixedstr::FixedStr::from_str("U116"),
    fixedstr::FixedStr::from_str("U116"),
    fixedstr::FixedStr::from_str("U116"),
    fixedstr::FixedStr::from_str("U116"),
    fixedstr::FixedStr::from_str("U54"),
    fixedstr::FixedStr::from_str("U54"),
    fixedstr::FixedStr::from_str("U54"),
    fixedstr::FixedStr::from_str("U54"),
    fixedstr::FixedStr::from_str("U123"),
    fixedstr::FixedStr::from_str("U123"),
    fixedstr::FixedStr::from_str("U123"),
    fixedstr::FixedStr::from_str("J47/U1"),
    fixedstr::FixedStr::from_str("J48/U1"),
    fixedstr::FixedStr::from_str("J49/U1"),
    fixedstr::FixedStr::from_str("U58"),
    fixedstr::FixedStr::from_str("U58"),
    fixedstr::FixedStr::from_str("U58"),
    fixedstr::FixedStr::from_str("U58"),
    fixedstr::FixedStr::from_str("U58"),
    fixedstr::FixedStr::from_str("U58"),
    fixedstr::FixedStr::from_str("U80"),
    fixedstr::FixedStr::from_str("U80"),
    fixedstr::FixedStr::from_str("U80"),
    fixedstr::FixedStr::from_str("U71"),
    fixedstr::FixedStr::from_str("U71"),
    fixedstr::FixedStr::from_str("U71"),
    fixedstr::FixedStr::from_str("U72"),
    fixedstr::FixedStr::from_str("U72"),
    fixedstr::FixedStr::from_str("U72"),
    fixedstr::FixedStr::from_str("U73"),
    fixedstr::FixedStr::from_str("U73"),
    fixedstr::FixedStr::from_str("U73"),
    fixedstr::FixedStr::from_str("U79"),
    fixedstr::FixedStr::from_str("U79"),
    fixedstr::FixedStr::from_str("U79"),
    fixedstr::FixedStr::from_str("J101"),
    fixedstr::FixedStr::from_str("J101"),
    fixedstr::FixedStr::from_str("J102"),
    fixedstr::FixedStr::from_str("J102"),
    fixedstr::FixedStr::from_str("J103"),
    fixedstr::FixedStr::from_str("J103"),
    fixedstr::FixedStr::from_str("J104"),
    fixedstr::FixedStr::from_str("J104"),
    fixedstr::FixedStr::from_str("J105"),
    fixedstr::FixedStr::from_str("J105"),
    fixedstr::FixedStr::from_str("J106"),
    fixedstr::FixedStr::from_str("J106"),
    fixedstr::FixedStr::from_str("J107"),
    fixedstr::FixedStr::from_str("J107"),
    fixedstr::FixedStr::from_str("J108"),
    fixedstr::FixedStr::from_str("J108"),
    fixedstr::FixedStr::from_str("J109"),
    fixedstr::FixedStr::from_str("J109"),
    fixedstr::FixedStr::from_str("J110"),
    fixedstr::FixedStr::from_str("J110"),
    fixedstr::FixedStr::from_str("J111"),
    fixedstr::FixedStr::from_str("J111"),
    fixedstr::FixedStr::from_str("J112"),
    fixedstr::FixedStr::from_str("J112"),
    fixedstr::FixedStr::from_str("FAN_CTRL"),
];
