build/xtask/tests/snapshots/i2c_codegen__app_cosmo_rev-b-dev.toml.sensor-id-to-name-Sensors.snap
---
source: build/xtask/tests/i2c-codegen.rs
expression: contents
---
pub const MAX_SENSOR_NAME_LEN: usize = 18;
pub const SENSOR_ID_TO_NAME: [fixedstr::FixedStr<
    'static,
    MAX_SENSOR_NAME_LEN,
>; 154] = [
    fixedstr::FixedStr::from_str("V12_U2A_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2A_A0"),
    fixedstr::FixedStr::from_str("V12_U2A_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2A_A0"),
    fixedstr::FixedStr::from_str("U2_N0"),
    fixedstr::FixedStr::from_str("V12_U2B_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2B_A0"),
    fixedstr::FixedStr::from_str("V12_U2B_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2B_A0"),
    fixedstr::FixedStr::from_str("U2_N1"),
    fixedstr::FixedStr::from_str("V12_U2C_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2C_A0"),
    fixedstr::FixedStr::from_str("V12_U2C_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2C_A0"),
    fixedstr::FixedStr::from_str("U2_N2"),
    fixedstr::FixedStr::from_str("V12_U2D_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2D_A0"),
    fixedstr::FixedStr::from_str("V12_U2D_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2D_A0"),
    fixedstr::FixedStr::from_str("U2_N3"),
    fixedstr::FixedStr::from_str("V12_U2E_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2E_A0"),
    fixedstr::FixedStr::from_str("V12_U2E_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2E_A0"),
    fixedstr::FixedStr::from_str("U2_N4"),
    fixedstr::FixedStr::from_str("V12_U2F_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2F_A0"),
    fixedstr::FixedStr::from_str("V12_U2F_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2F_A0"),
    fixedstr::FixedStr::from_str("U2_N5"),
    fixedstr::FixedStr::from_str("V12_U2G_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2G_A0"),
    fixedstr::FixedStr::from_str("V12_U2G_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2G_A0"),
    fixedstr::FixedStr::from_str("U2_N6"),
    fixedstr::FixedStr::from_str("V12_U2H_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2H_A0"),
    fixedstr::FixedStr::from_str("V12_U2H_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2H_A0"),
    fixedstr::FixedStr::from_str("U2_N7"),
    fixedstr::FixedStr::from_str("V12_U2I_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2I_A0"),
    fixedstr::FixedStr::from_str("V12_U2I_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2I_A0"),
    fixedstr::FixedStr::from_str("U2_N8"),
    fixedstr::FixedStr::from_str("V12_U2J_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2J_A0"),
    fixedstr::FixedStr::from_str("V12_U2J_A0"),
    fixedstr::FixedStr::from_str("V3P3_U2J_A0"),
    fixedstr::FixedStr::from_str("U2_N9"),
    fixedstr::FixedStr::from_str("Southwest"),
    fixedstr::FixedStr::from_str("South"),
    fixedstr::FixedStr::from_str("Southeast"),
    fixedstr::FixedStr::from_str("M2_A"),
    fixedstr::FixedStr::from_str("M2_B"),
    fixedstr::FixedStr::from_str("CPU"),
    fixedstr::FixedStr::from_str("t6"),
    fixedstr::FixedStr::from_str("V3P3_SP_A2"),
    fixedstr::FixedStr::from_str("V3P3_SP_A2"),
    fixedstr::FixedStr::from_str("V3P3_SP_A2"),
    fixedstr::FixedStr::from_str("V5_SYS_A2"),
    fixedstr::FixedStr::from_str("V5_SYS_A2"),
    fixedstr::FixedStr::from_str("V5_SYS_A2"),
    fixedstr::FixedStr::from_str("V1P8_SYS_A2"),
    fixedstr::FixedStr::from_str("V1P8_SYS_A2"),
    fixedstr::FixedStr::from_str("V1P8_SYS_A2"),
    fixedstr::FixedStr::from_str("V3P3_M2A_A0HP"),
    fixedstr::FixedStr::from_str("V3P3_M2B_A0HP"),
    fixedstr::FixedStr::from_str("V3P3_M2A_A0HP"),
    fixedstr::FixedStr::from_str("V3P3_M2B_A0HP"),
    fixedstr::FixedStr::from_str("V12_MCIO_A0HP"),
    fixedstr::FixedStr::from_str("V12_MCIO_A0HP"),
    fixedstr::FixedStr::from_str("V12_DDR5_GHIJKL_A0"),
    fixedstr::FixedStr::from_str("V12_DDR5_GHIJKL_A0"),
    fixedstr::FixedStr::from_str("V12_DDR5_ABCDEF_A0"),
    fixedstr::FixedStr::from_str("V12_DDR5_ABCDEF_A0"),
    fixedstr::FixedStr::from_str("VDDCR_CPU0_A0"),
    fixedstr::FixedStr::from_str("VDDCR_SOC_A0"),
    fixedstr::FixedStr::from_str("VDDCR_CPU0_A0"),
    fixedstr::FixedStr::from_str("VDDCR_SOC_A0"),
    fixedstr::FixedStr::from_str("VDDCR_CPU0_A0"),
    fixedstr::FixedStr::from_str("VDDCR_SOC_A0"),
    fixedstr::FixedStr::from_str("VDDCR_CPU0_A0"),
    fixedstr::FixedStr::from_str("VDDCR_SOC_A0"),
    fixedstr::FixedStr::from_str("VDDCR_CPU1_A0"),
    fixedstr::FixedStr::from_str("VDDIO_SP5_A0"),
    fixedstr::FixedStr::from_str("VDDCR_CPU1_A0"),
    fixedstr::FixedStr::from_str("VDDIO_SP5_A0"),
    fixedstr::FixedStr::from_str("VDDCR_CPU1_A0"),
    fixedstr::FixedStr::from_str("VDDIO_SP5_A0"),
    fixedstr::FixedStr::from_str("VDDCR_CPU1_A0"),
    fixedstr::FixedStr::from_str("VDDIO_SP5_A0"),
    fixedstr::FixedStr::from_str("V1P1_SP5_A0"),
    fixedstr::FixedStr::from_str("V1P8_SP5_A1"),
    fixedstr::FixedStr::from_str("V3P3_SP5_A1"),
    fixedstr::FixedStr::from_str("V1P1_SP5_A0"),
    fixedstr::FixedStr::from_str("V1P8_SP5_A1"),
    fixedstr::FixedStr::from_str("V3P3_SP5_A1"),
    fixedstr::FixedStr::from_str("V12P0_NIC_A0HP"),
    fixedstr::FixedStr::from_str("V5P0_NIC_A0HP"),
    fixedstr::FixedStr::from_str("V12P0_NIC_A0HP"),
    fixedstr::FixedStr::from_str("V5P0_NIC_A0HP"),
    fixedstr::FixedStr::from_str("V0P96_NIC_VDD_A0HP"),
    fixedstr::FixedStr::from_str("V0P96_NIC_VDD_A0HP"),
    fixedstr::FixedStr::from_str("V0P96_NIC_VDD_A0HP"),
    fixedstr::FixedStr::from_str("Northwest"),
    fixedstr::FixedStr::from_str("North"),
    fixedstr::FixedStr::from_str("Northeast"),
    fixedstr::FixedStr::from_str("Southeast"),
    fixedstr::FixedStr::from_str("Northeast"),
    fixedstr::FixedStr::from_str("South"),
    fixedstr::FixedStr::from_str("North"),
    fixedstr::FixedStr::from_str("Southwest"),
    fixedstr::FixedStr::from_str("Northwest"),
    fixedstr::FixedStr::from_str("V12_SYS_A2"),
    fixedstr::FixedStr::from_str("V12_SYS_A2"),
    fixedstr::FixedStr::from_str("V12_SYS_A2"),
    fixedstr::FixedStr::from_str("V54P5_FAN_EAST"),
    fixedstr::FixedStr::from_str("V54P5_FAN_EAST"),
    fixedstr::FixedStr::from_str("V54P5_FAN_EAST"),
    fixedstr::FixedStr::from_str("V54P5_FAN_CENTRAL"),
    fixedstr::FixedStr::from_str("V54P5_FAN_CENTRAL"),
    fixedstr::FixedStr::from_str("V54P5_FAN_CENTRAL"),
    fixedstr::FixedStr::from_str("V54P5_FAN_WEST"),
    fixedstr::FixedStr::from_str("V54P5_FAN_WEST"),
    fixedstr::FixedStr::from_str("V54P5_FAN_WEST"),
    fixedstr::FixedStr::from_str("V54P5_IBC_A3"),
    fixedstr::FixedStr::from_str("V54P5_IBC_A3"),
    fixedstr::FixedStr::from_str("V54P5_IBC_A3"),
    fixedstr::FixedStr::from_str("A_TS0"),
    fixedstr::FixedStr::from_str("A_TS1"),
    fixedstr::FixedStr::from_str("B_TS0"),
    fixedstr::FixedStr::from_str("B_TS1"),
    fixedstr::FixedStr::from_str("C_TS0"),
    fixedstr::FixedStr::from_str("C_TS1"),
    fixedstr::FixedStr::from_str("D_TS0"),
    fixedstr::FixedStr::from_str("D_TS1"),
    fixedstr::FixedStr::from_str("E_TS0"),
    fixedstr::FixedStr::from_str("E_TS1"),
    fixedstr::FixedStr::from_str("F_TS0"),
    fixedstr::FixedStr::from_str("F_TS1"),
    fixedstr::FixedStr::from_str("G_TS0"),
    fixedstr::FixedStr::from_str("G_TS1"),
    fixedstr::FixedStr::from_str("H_TS0"),
    fixedstr::FixedStr::from_str("H_TS1"),
    fixedstr::FixedStr::from_str("I_TS0"),
    fixedstr::FixedStr::from_str("I_TS1"),
    fixedstr::FixedStr::from_str("J_TS0"),
    fixedstr::FixedStr::from_str("J_TS1"),
    fixedstr::FixedStr::from_str("K_TS0"),
    fixedstr::FixedStr::from_str("K_TS1"),
    fixedstr::FixedStr::from_str("L_TS0"),
    fixedstr::FixedStr::from_str("L_TS1"),
    fixedstr::FixedStr::from_str("fan_ctrl"),
];
