build/xtask/tests/snapshots/i2c_codegen__app_gimlet_rev-f-dev.toml.codegen-Target.snap
---
source: build/xtask/tests/i2c-codegen.rs
expression: contents
---
pub(crate) mod i2c_config {
    #[allow(dead_code)]
    pub const NCONTROLLERS: usize = 1;
    use drv_stm32xx_i2c::I2cController;
    pub fn controllers() -> [I2cController<'static>; NCONTROLLERS] {
        use drv_i2c_api::Controller;
        use drv_stm32xx_sys_api::Peripheral;
        [I2cController {
            controller: Controller::I2C1,
            peripheral: Peripheral::I2c1,
            notification: crate::notifications::I2C1_IRQ_MASK,
            registers: unsafe { &*device::I2C1::ptr() },
        }]
    }
    #[allow(unused_imports)]
    use drv_stm32xx_i2c::{I2cGpio, I2cPins};
    pub fn pins() -> [I2cPins; 1] {
        use drv_i2c_api::{Controller, PortIndex};
        use drv_stm32xx_sys_api::{self as gpio_api, Alternate};
        [I2cPins {
            controller: Controller::I2C1,
            port: PortIndex(0),
            scl: gpio_api::Port::B.pin(6),
            sda: gpio_api::Port::B.pin(7),
            function: Alternate::AF4,
        }]
    }
    pub mod ports {
        #[allow(dead_code)]
        pub const fn i2c1_b() -> drv_i2c_api::PortIndex {
            drv_i2c_api::PortIndex(0)
        }
        #[allow(dead_code)]
        pub const fn i2c3_h() -> drv_i2c_api::PortIndex {
            drv_i2c_api::PortIndex(0)
        }
        #[allow(dead_code)]
        pub const fn i2c4_f() -> drv_i2c_api::PortIndex {
            drv_i2c_api::PortIndex(0)
        }
        #[allow(dead_code)]
        pub const fn i2c2_b() -> drv_i2c_api::PortIndex {
            drv_i2c_api::PortIndex(0)
        }
        #[allow(dead_code)]
        pub const fn i2c2_f() -> drv_i2c_api::PortIndex {
            drv_i2c_api::PortIndex(1)
        }
    }
}
